--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="nav__container">
       <!-- Logo -->
       <a href="#home" class="nav__logo" aria-label="Karin Gunnerek, Architect - Go to homepage">
-        <svg width="120" height="32" viewBox="0 0 120 32" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <svg width="120" height="32" viewBox="0 0 120 32" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
           <text x="0" y="20" font-family="Inter, sans-serif" font-size="16" font-weight="500" fill="currentColor">
             Karin Gunnerek
           </text>
@@ -61,15 +61,15 @@
       </a>
       
       <!-- Navigation menu -->
-      <ul class="nav__menu" role="menubar">
-        <li role="none">
-          <a href="#projects" class="nav__link" role="menuitem">Projects</a>
+      <ul class="nav__menu">
+        <li>
+          <a href="#projects" class="nav__link">Projects</a>
         </li>
-        <li role="none">
-          <a href="#about" class="nav__link" role="menuitem">About</a>
+        <li>
+          <a href="#about" class="nav__link">About</a>
         </li>
-        <li role="none">
-          <a href="#booking" class="nav__link nav__link--cta" role="menuitem">Book a Consultation</a>
+        <li>
+          <a href="#booking" class="nav__link nav__link--cta">Book a Consultation</a>
         </li>
       </ul>
     </div>
