--- a/index.html
+++ b/index.html
@@ -103,13 +103,7 @@
   <nav class="nav" role="navigation" aria-label="Main navigation">
     <div class="nav__container">
       <!-- Logo -->
-      <a href="#home" class="nav__logo" aria-label="Karin Gunnerek, Architect - Go to homepage">
-        <svg width="120" height="32" viewBox="0 0 120 32" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-          <text x="0" y="20" font-family="Inter, sans-serif" font-size="16" font-weight="500" fill="currentColor">
-            Karin Gunnerek
-          </text>
-        </svg>
-      </a>
+      <a href="#home" class="nav__logo" aria-label="Karin Gunnerek, Architect - Go to homepage">Karin Gunnerek</a>
       
       <!-- Navigation menu -->
       <ul class="nav__menu">
