--- a/index.html
+++ b/index.html
@@ -173,8 +173,10 @@
       <div class="container">
         <h2 id="booking-title" class="section__title" data-i18n-key="sections.bookingTitle">Book a Consultation</h2>
         <div id="calendly-widget" class="booking__widget">
-          <!-- CLIENT ACTION REQUIRED: Replace this placeholder with Calendly embed code -->
-          <p class="booking__placeholder" data-i18n-key="sections.bookingPlaceholder">Calendly widget will be embedded here</p>
+          <!-- Calendly inline widget begin -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/kg-arkitekter/30min?hide_event_type_details=1&hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
+            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+              <!-- Calendly inline widget end -->
         </div>
       </div>
     </section>
