--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
         <div id="projects-grid" class="projects__grid" role="region" aria-label="Project portfolio">
           <!-- Projects will be populated by JavaScript -->
         </div>
+        <div class="load-more__container">
+          <button id="load-more-btn" class="load-more__btn">Load More</button>
+        </div>
       </div>
     </section>
     
