--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.min.css">
   
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -256,6 +256,6 @@
   </div>
   
   <!-- Scripts -->
-  <script src="script.js" defer></script>
+  <script src="script.min.js" defer></script>
 </body>
 </html>
