--- a/terms.html
+++ b/terms.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.min.css">
 </head>
 <body>
   <!-- Skip to content link for accessibility -->
@@ -32,31 +32,25 @@
   <nav class="nav" role="navigation" aria-label="Main navigation">
     <div class="nav__container">
       <!-- Logo -->
-      <a href="index.html" class="nav__logo" aria-label="Karin Gunnerek, Architect - Go to homepage">
-        <svg width="120" height="32" viewBox="0 0 120 32" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <text x="0" y="20" font-family="Inter, sans-serif" font-size="16" font-weight="500" fill="currentColor">
-            Karin Gunnerek
-          </text>
-        </svg>
-      </a>
+      <a href="index.html" class="nav__logo" aria-label="Karin Gunnerek, Architect - Go to homepage">Karin Gunnerek</a>
       
       <!-- Navigation menu -->
-      <ul class="nav__menu" role="menubar">
-        <li role="none">
-          <a href="index.html#projects" class="nav__link" role="menuitem">Projects</a>
+      <ul class="nav__menu">
+        <li>
+          <a href="index.html#projects" class="nav__link">Projects</a>
         </li>
-        <li role="none">
-          <a href="index.html#about" class="nav__link" role="menuitem">About</a>
+        <li>
+          <a href="index.html#about" class="nav__link">About</a>
         </li>
-        <li role="none">
-          <a href="index.html#booking" class="nav__link nav__link--cta" role="menuitem">Book a Consultation</a>
+        <li>
+          <a href="index.html#booking" class="nav__link nav__link--cta">Book a Consultation</a>
         </li>
       </ul>
     </div>
   </nav>
   
   <!-- Main content -->
-  <main id="main" style="padding-top: var(--nav-height);">
+  <main id="main" class="main-content">
     <section class="legal-page">
       <div class="container">
         <div class="legal-page__content">
