added video in hero section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
     <!-- Hero section -->
     <section id="home" class="hero" aria-labelledby="hero-title">
       <div class="hero__background" role="img" aria-label="Minimalist architectural interior with natural light">
-        <!-- Background image placeholder - will be styled via CSS -->
+        <video autoplay loop muted playsinline class="hero__video">
+          <source src="Architectural_Idea_s_Looping_Video_Journey.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
       <div class="hero__content">
         <h1 id="hero-title" class="hero__title" data-i18n-key="sections.heroTitle">We design spaces that are not only seen, but felt.</h1>
