--- a/index.html
+++ b/index.html
@@ -123,15 +123,14 @@
   <!-- Main content -->
   <main id="main">
     <!-- Hero section -->
-    <section id="home" class="hero" aria-labelledby="hero-title">
-      <div class="hero__background" role="img" aria-label="Minimalist architectural interior with natural light">
+    <section id="home" class="hero">
+      <div class="hero__background">
         <video autoplay loop muted playsinline class="hero__video">
           <source src="Architectural_Idea_s_Looping_Video_Journey.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
-      </div>
-      <div class="hero__content">
-        <h1 id="hero-title" class="hero__title" data-i18n-key="sections.heroTitle">We design spaces that are not only seen, but felt.</h1>
+        <button id="hero-audio-toggle" class="hero__audio-toggle" aria-label="Unmute video">
+        </button>
       </div>
     </section>
     
