pointing to new js file not min

--- a/index.html
+++ b/index.html
@@ -322,6 +322,6 @@
   </div>
   
   <!-- Scripts -->
-  <script src="script.min.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
