update profile image code.

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
         <div class="about__content">
           <div class="about__image">
             <!-- CLIENT ACTION REQUIRED: Replace with final professional headshot image -->
-            <img src="https://picsum.photos/400/500?random=100" 
-                 alt="Professional headshot of Karin Gunnerek, architect" 
+            <img src="kgprofile.jpg" 
+                 alt="Architect Karin Gunnerek standing in a sunlit stone archway." 
                  class="about__headshot"
                  loading="lazy"
                  width="400" 
