--- a/terms.html
+++ b/terms.html
@@ -4,51 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  
   <title>Användarvillkor / Terms of Use | Karin Gunnerek Arkitekt</title>
   <meta name="description" content="Användarvillkor (Terms of Use) för Karin Gunnerek, arkitekt i Skövde, Sverige.">
-  
   <link rel="icon" type="image/png" href="favicon.png">
-  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  
   <link rel="stylesheet" href="style.css">
   <style>
-    .lang-divider {
-      margin: var(--space-xl) 0;
-      border: 0;
-      border-top: 1px solid var(--color-border);
-    }
-    .lang-section h2 {
-        font-size: var(--font-size-xl);
-        font-weight: var(--font-weight-semibold);
-        margin-bottom: var(--space-lg);
-    }
+    .lang-divider { margin: var(--space-xl) 0; border: 0; border-top: 1px solid var(--color-border); }
+    .lang-section h2 { font-size: var(--font-size-xl); font-weight: var(--font-weight-semibold); margin-bottom: var(--space-lg); }
   </style>
 </head>
 <body>
   <a href="#main" class="skip-link">Hoppa till huvudinnehåll</a>
-  
   <nav class="nav" role="navigation" aria-label="Main navigation">
     <div class="nav__container">
-        <a href="index.html" class="nav__logo" aria-label="Karin Gunnerek, Architect - Go to homepage">Karin Gunnerek</a>
-        <ul class="nav__menu">
-          <li><a href="index.html#projects" class="nav__link">Projekt</a></li>
-          <li><a href="index.html#about" class="nav__link">Om mig</a></li>
-          <li><a href="index.html#booking" class="nav__link nav__link--cta">Boka konsultation</a></li>
-        </ul>
+      <a href="index.html" class="nav__logo">Karin Gunnerek</a>
+      <ul class="nav__menu">
+        <li><a href="index.html#projects" class="nav__link">Projekt</a></li>
+        <li><a href="index.html#about" class="nav__link">Om mig</a></li>
+        <li><a href="index.html#booking" class="nav__link nav__link--cta">Boka konsultation</a></li>
+      </ul>
     </div>
   </nav>
-  
   <main id="main" class="main-content">
     <section class="legal-page">
       <div class="container">
         <div class="legal-page__content">
           <h1 class="legal-page__title">Användarvillkor / Terms of Use</h1>
-
           <div class="legal-page__placeholder" style="border-color: #dc3545; background-color: #f8d7da33;">
             <p><strong>VIKTIGT JURIDISKT MEDDELANDE / IMPORTANT LEGAL NOTICE:</strong> Denna text är ett exempel och utgör inte juridisk rådgivning. / This text is a template and does not constitute legal advice.</p>
           </div>
@@ -72,7 +56,6 @@
             <h3>3. Governing Law</h3>
             <p>These terms shall be interpreted in accordance with Swedish law, and any dispute shall be settled in a Swedish court.</p>
           </div>
-
           <div class="legal-page__back">
             <a href="index.html" class="nav__link">← Tillbaka till startsidan</a>
           </div>
