privacy and terms visible bug fix

--- a/terms.html
+++ b/terms.html
@@ -29,7 +29,7 @@
     </div>
   </nav>
   <main id="main" class="main-content">
-    <section class="legal-page">
+    <section class="legal-page is-visible">
       <div class="container">
         <div class="legal-page__content">
           <h1 class="legal-page__title">Användarvillkor / Terms of Use</h1>
