Remove red banner from TOU

--- a/privacy.html
+++ b/privacy.html
@@ -33,9 +33,7 @@
       <div class="container">
         <div class="legal-page__content">
           <h1 class="legal-page__title">Integritetspolicy / Privacy Policy</h1>
-          <div class="legal-page__placeholder" style="border-color: #dc3545; background-color: #f8d7da33;">
-            <p><strong>VIKTIGT JURIDISKT MEDDELANDE / IMPORTANT LEGAL NOTICE:</strong> Denna text är ett exempel och utgör inte juridisk rådgivning. / This text is a template and does not constitute legal advice.</p>
-          </div>
+          
           <div lang="sv" class="lang-section">
             <h2>Svenska</h2>
             <hr class="lang-divider">
@@ -46,7 +44,7 @@
             <h3>3. Delning och Lagring</h3>
             <p>Dina uppgifter kan delas med betrodda tredjepartstjänster (t.ex. bokningssystem) och sparas endast så länge det är nödvändigt för ändamålet eller enligt lag.</p>
             <h3>4. Dina rättigheter</h3>
-            <p>Du har rätt att begära tillgång till, rättelse eller radering av dina personuppgifter. Kontakta [e-postadress] för frågor.</p>
+            <p>Du har rätt att begära tillgång till, rättelse eller radering av dina personuppgifter. Kontakta Karin Gunnerek för frågor.</p>
           </div>
           <div lang="en" class="lang-section" style="margin-top: 3rem;">
             <h2>English</h2>
@@ -58,7 +56,7 @@
             <h3>3. Sharing and Retention</h3>
             <p>Your data may be shared with trusted third-party services (e.g., booking systems) and is retained only as long as necessary for the purpose or as required by law.</p>
             <h3>4. Your Rights</h3>
-            <p>You have the right to request access to, correction of, or deletion of your personal data. For questions, please contact [email address].</p>
+            <p>You have the right to request access to, correction of, or deletion of your personal data. For questions, please contact Karin Gunnerek.</p>
           </div>
           <div class="legal-page__back">
             <a href="index.html" class="nav__link">← Tillbaka till startsidan</a>
