Video text layover

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
     <!-- Hero section -->
     <section id="home" class="hero">
       <div class="hero__background">
+        <div id="hero-text-container" class="hero-text">
+          <p class="hero-text__tagline" data-i18n-key="sections.heroTagline"></p>
+          <p class="hero-text__brand" data-i18n-key="sections.heroBrandName"></p>
+        </div>
         <video autoplay loop muted playsinline class="hero__video">
           <source src="Architectural_Idea_s_Looping_Video_Journey.mp4" type="video/mp4">
           Your browser does not support the video tag.
