Projects to plural and favikon text update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <!-- SEO Meta Tags -->
-  <title>Karin Gunnerek | Architect in Skövde, Sweden | Arkitekt Sverige</title>
+  <title>Karin Gunnerek | Arkitekt i Skövde, Västra Götaland</title>
   <meta name="description" content="Karin Gunnerek is a Skövde-based architect specializing in minimalist, sustainable design for clients across Sweden. Explore her portfolio of modern residential and commercial projects.">
   
   <!-- Open Graph / Facebook -->
