--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     "@context": "https://schema.org",
     "@graph": [
       {
-        "@type": "Person",
+        "@type": "Architect",
         "@id": "https://karingunnerek.se/#person",
         "name": "Karin Gunnerek",
         "jobTitle": "Architect",
