--- a/index.html
+++ b/index.html
@@ -179,35 +179,35 @@
       <div class="about__container">
         <div class="about__left">
           <h2 id="about-title" class="about__main-title" data-i18n-key="sections.aboutTitle">
-            Om mig /<br>About me
+            Om mig.<br>About<br>me.
           </h2>
         </div>
+        <div class="about__middle">
+          <h3 class="about__section-heading" data-i18n-key="sections.aboutSubheading1">
+            An architect in the Västra Götaland region committed to making beautiful, smart and sustainable buildings.
+          </h3>
+          <p class="about__paragraph" data-i18n-key="sections.aboutBio1">
+            For more than twenty years, the design team at Karin Gunnerek has fused innovative design with state-of-the-art building science to deliver inventive, artistic, high-performance buildings.
+          </p>
+          <p class="about__paragraph" data-i18n-key="sections.aboutBio2">
+            We believe in health and renewal—for the spaces we live in and the earth we live on. Through responsible construction practices that utilize safe, energy-efficient materials, Karin delivers projects that are equally sensitive to the individual and the environment.
+          </p>
+          <p class="about__paragraph" data-i18n-key="sections.aboutBio3">
+            The firm strives to make architecture that adds richness to people's lives, so that they can live and work with joy and longevity. Vibrant buildings meant to last, for a vital world meant to last.
+          </p>
+          <p class="about__paragraph" data-i18n-key="sections.aboutBio4">
+            We work across the Pacific Northwest, completing projects in Eugene, Portland, Seattle, Bellingham, the San Juan Islands, Bainbridge Island, and beyond—from innovative custom homes to dynamic academic and commercial facilities.
+          </p>
+        </div>
         <div class="about__right">
-          <div class="about__text-content">
-            <h3 class="about__section-heading" data-i18n-key="sections.aboutSubheading1">
-              An architect in the Västra Götaland region committed to making beautiful, smart and sustainable buildings.
-            </h3>
-            <p class="about__paragraph" data-i18n-key="sections.aboutBio1">
-              For more than twenty years, the design team at Karin Gunnerek has fused innovative design with state-of-the-art building science to deliver inventive, artistic, high-performance buildings.
-            </p>
-            <p class="about__paragraph" data-i18n-key="sections.aboutBio2">
-              We believe in health and renewal—for the spaces we live in and the earth we live on. Through responsible construction practices that utilize safe, energy-efficient materials, Karin delivers projects that are equally sensitive to the individual and the environment.
-            </p>
-            <p class="about__paragraph" data-i18n-key="sections.aboutBio3">
-              The firm strives to make architecture that adds richness to people's lives, so that they can live and work with joy and longevity. Vibrant buildings meant to last, for a vital world meant to last.
-            </p>
-            <p class="about__paragraph" data-i18n-key="sections.aboutBio4">
-              We work across the Pacific Northwest, completing projects in Eugene, Portland, Seattle, Bellingham, the San Juan Islands, Bainbridge Island, and beyond—from innovative custom homes to dynamic academic and commercial facilities.
-            </p>
-          </div>
           <div class="about__image">
             <!-- CLIENT ACTION REQUIRED: Replace with final professional headshot image -->
             <img src="kgprofile.jpg"
                  alt="Architect Karin Gunnerek standing in a sunlit stone archway."
                  class="about__headshot"
                  loading="lazy"
-                 width="600"
-                 height="800">
+                 width="800"
+                 height="1000">
           </div>
         </div>
       </div>
