--- a/index.html
+++ b/index.html
@@ -179,25 +179,25 @@
       <div class="about__container">
         <div class="about__left">
           <h2 id="about-title" class="about__main-title" data-i18n-key="sections.aboutTitle">
-            Om mig.<br>About<br>me.
+            About me
           </h2>
-        </div>
-        <div class="about__middle">
-          <h3 class="about__section-heading" data-i18n-key="sections.aboutSubheading1">
-            An architect in the Västra Götaland region committed to making beautiful, smart and sustainable buildings.
-          </h3>
-          <p class="about__paragraph" data-i18n-key="sections.aboutBio1">
-            For more than twenty years, the design team at Karin Gunnerek has fused innovative design with state-of-the-art building science to deliver inventive, artistic, high-performance buildings.
-          </p>
-          <p class="about__paragraph" data-i18n-key="sections.aboutBio2">
-            We believe in health and renewal—for the spaces we live in and the earth we live on. Through responsible construction practices that utilize safe, energy-efficient materials, Karin delivers projects that are equally sensitive to the individual and the environment.
-          </p>
-          <p class="about__paragraph" data-i18n-key="sections.aboutBio3">
-            The firm strives to make architecture that adds richness to people's lives, so that they can live and work with joy and longevity. Vibrant buildings meant to last, for a vital world meant to last.
-          </p>
-          <p class="about__paragraph" data-i18n-key="sections.aboutBio4">
-            We work across the Pacific Northwest, completing projects in Eugene, Portland, Seattle, Bellingham, the San Juan Islands, Bainbridge Island, and beyond—from innovative custom homes to dynamic academic and commercial facilities.
-          </p>
+          <div class="about__text-content">
+            <h3 class="about__section-heading" data-i18n-key="sections.aboutSubheading1">
+              An architect in the Västra Götaland region committed to making beautiful, smart and sustainable buildings.
+            </h3>
+            <p class="about__paragraph" data-i18n-key="sections.aboutBio1">
+              Karin Gunnerek is a Skövde-based architect specializing in sustainable design for residential and commercial projects across Västra Götaland. After graduating with honors from the KTH Royal Institute of Technology's School of Architecture, Karin founded her practice in 2015 with a vision to create thoughtful spaces that harmonize with the local landscape and the needs of society.
+            </p>
+            <p class="about__paragraph" data-i18n-key="sections.aboutBio2">
+              Working closely with clients across Skaraborg and beyond, Karin's approach emphasizes sustainability, functionality and connection to place. From initial concept development to planning permission and project management, she guides each project with attention to environmental impact and long-term value.
+            </p>
+            <p class="about__paragraph" data-i18n-key="sections.aboutBio3">
+              The firm strives to make architecture that adds richness to people's lives, so that they can live and work with joy and longevity. Vibrant buildings meant to last, for a vital world meant to last.
+            </p>
+            <p class="about__paragraph" data-i18n-key="sections.aboutBio4">
+              We work across the Pacific Northwest, completing projects in Eugene, Portland, Seattle, Bellingham, the San Juan Islands, Bainbridge Island, and beyond—from innovative custom homes to dynamic academic and commercial facilities.
+            </p>
+          </div>
         </div>
         <div class="about__right">
           <div class="about__image">
