--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
@@ -201,13 +201,13 @@
         </div>
         <div class="about__right">
           <div class="about__image">
-            <!-- CLIENT ACTION REQUIRED: Replace with final professional headshot image -->
-            <img src="kgprofile.jpg"
-                 alt="Architect Karin Gunnerek standing in a sunlit stone archway."
+            <!-- Placeholder image - replace with your own -->
+            <img src="https://picsum.photos/800/600?random=1"
+                 alt="Placeholder image"
                  class="about__headshot"
                  loading="lazy"
                  width="800"
-                 height="1000">
+                 height="600">
           </div>
         </div>
       </div>
