--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <div class="about__container">
         <div class="about__left">
           <h2 id="about-title" class="about__main-title" data-i18n-key="sections.aboutTitle">
-            About me
+            About me.
           </h2>
           <div class="about__text-content">
             <h3 class="about__section-heading" data-i18n-key="sections.aboutSubheading1">
