--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <nav class="nav" role="navigation" aria-label="Main navigation">
     <div class="nav__container">
       <!-- Logo -->
-      <a href="#home" class="nav__logo" aria-label="Karin Gunnerek, Architect - Go to homepage">Karin Gunnerek</a>
+      <a href="#home" class="nav__logo" aria-label="Karin Gunnerek, Architect - Go to homepage">Karin Gunnerek Architecture</a>
       
       <!-- Navigation menu -->
       <ul class="nav__menu">
