--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
             <path d="M11 5L6 9H2v6h4l5 4V5zM23 9l-6 6M17 9l6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </button>
+        <div class="hero__scroll-indicator" aria-label="Scroll down for more content">
+          <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 5v14M5 12l7 7 7-7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
       </div>
       <h1 class="visually-hidden" data-i18n-key="sections.heroTitle">Architecture in Skövde – Designing Sustainable Spaces</h1>
     </section>
