--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="sv">
+<link rel="alternate" hreflang="sv" href="https://karingunnerek.se/" />
+<link rel="alternate" hreflang="en" href="https://karingunnerek.se/en/" />
+<link rel="alternate" hreflang="x-default" href="https://karingunnerek.se/" />
 <head>
   <!-- Character encoding and viewport -->
   <meta charset="UTF-8">
@@ -7,21 +10,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <!-- SEO Meta Tags -->
-  <title>Karin Gunnerek | Arkitekt i Skövde, Västra Götaland</title>
-  <meta name="description" content="Karin Gunnerek is a Skövde-based architect specializing in minimalist, sustainable design for clients across Sweden. Explore her portfolio of modern residential and commercial projects.">
+  <title>Arkitekt Skövde | Karin Gunnerek Arkitektur | Villaritning & Bygglovsritningar</title>
+  <meta name="description" content="Arkitekt i Skövde med specialisering på hållbar arkitektur, villaritningar och bygglovsritningar. Tjänar Västra Götaland och Skaraborg. Kontakta oss för din byggprojekt.">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://karingunnerek.se/">
-  <meta property="og:title" content="Karin Gunnerek | Architect in Skövde, Sweden">
-  <meta property="og:description" content="Karin Gunnerek is a Skövde-based architect specializing in minimalist, sustainable design for clients across Sweden.">
+  <meta property="og:title" content="Arkitekt Skövde | Karin Gunnerek Arkitektur | Villaritning & Bygglovsritningar">
+  <meta property="og:description" content="Arkitekt i Skövde med specialisering på hållbar arkitektur, villaritningar och bygglovsritningar. Tjänar Västra Götaland och Skaraborg.">
   <meta property="og:image" content="https://karingunnerek.se/images/og-image.jpg">
+  <meta property="og:locale" content="sv_SE">
+  <meta property="og:locale:alternate" content="en_US">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://karingunnerek.se/">
-  <meta property="twitter:title" content="Karin Gunnerek | Architect in Skövde, Sweden">
-  <meta property="twitter:description" content="Karin Gunnerek is a Skövde-based architect specializing in minimalist, sustainable design for clients across Sweden.">
+  <meta property="twitter:title" content="Arkitekt Skövde | Karin Gunnerek Arkitektur | Villaritning & Bygglovsritningar">
+  <meta property="twitter:description" content="Arkitekt i Skövde med specialisering på hållbar arkitektur, villaritningar och bygglovsritningar. Tjänar Västra Götaland och Skaraborg.">
   <meta property="twitter:image" content="https://karingunnerek.se/images/twitter-image.jpg">
   
   <!-- Favicon -->
@@ -111,8 +116,15 @@
   }
   </script>
   
-  <!-- Google Analytics placeholder -->
-  <!-- TODO: Add Google Analytics tracking code here -->
+  <!-- Google Analytics -->
+  <!-- Replace GA_MEASUREMENT_ID with your actual Google Analytics ID -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
 </head>
 <body>
   <!-- Skip to content link for accessibility -->
@@ -200,7 +212,7 @@
               The firm strives to make architecture that adds richness to people's lives, so that they can live and work with joy and longevity. Vibrant buildings meant to last, for a vital world meant to last.
             </p>
             <p class="about__paragraph" data-i18n-key="sections.aboutBio4">
-              We work across the Pacific Northwest, completing projects in Eugene, Portland, Seattle, Bellingham, the San Juan Islands, Bainbridge Island, and beyond—from innovative custom homes to dynamic academic and commercial facilities.
+              Whether designing a family home in Skövde, a community center in Skaraborg, or a commercial space in Västra Götaland, Karin's work reflects a commitment to architecture that enriches daily life and stands the test of time.
             </p>
           </div>
         </div>
